maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: forward reference extends over definition of value sortie
      for(y <- 0 until Y){
                       ^ShortestPathMaze:16: error: forward reference extends over definition of value X
  marquerSol(sortie, 0);
  ^ShortestPathMaze:16: error: forward reference extends over definition of value Y
  marquerSol(sortie, 0);
  ^